# pipe3d

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/models/1mcube/: 1mcube.blend  1mcube.blend1  1mcube.mtl
assets/models/chloe-lis/: 0.mtl  TX_Chloe01_Body_N.tga  TX_Chloe01_Head_S.tga  TX_M_Chloe01_Body_S.tga  TX_M_Chloe02_Head_D.tga  TX_M_ChloeUnderwear01_Hair_D.tga  TX_M_ChloeUnderwear01_Hair_N.tga  TX_M_ChloeUnderwear01_Hair_S.tga
assets/models/donut/: donut3.mtl
assets/models/lightcube/: lightcube.blend  lightcube.mtl
assets/models/sponza/: sponza.mtl
assets/shaders/: DefaultShader.fragment  DefaultShader.shader  DefaultShader.vertex  EmissiveSurface.shader  Framebuffer.fragment  Framebuffer.vertex  FramebufferShadowMapDebug.fragment  ShadowMap.vertex  SingleColor.fragment  Skybox.fragment  Skybox.vertex  TestEnvMapping.fragment  White.fragment  White.vertex
assets/shaders/PostProcessingEffects/: Inverter.fragment  Kernel.fragment
assets/skyboxes/oceansky/: README
src/: Playground.cpp  Playground.h
src/Renderer/: BufferLayout.h  Camera3D.cpp  Camera3D.h  CubemapTexture.h  Framebuffer.cpp  Framebuffer.h  Geometry.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  MultisampledFramebuffer.cpp  MultisampledFramebuffer.h  OrthoProjection.cpp  OrthoProjection.h  PerspectiveProjection.cpp  PerspectiveProjection.h  Renderer.cpp  Renderer.h  RenderingPipeline.h  Scene.h  Shader.cpp  Shader.h  ShaderManager.h  Skybox.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  WavefrontMeshLoader.h  WindowData.h
src/Renderer/RenderingStages/: DirectionalShadowMapGeneration.h  FramebufferToScreen.h  MainStage.h  MultisampledMainStage.h  PostProcessingEffect.h  ShadowMapDebug.h
